test_suite/ui/invalid_repr.stderr
error: repr must be an integer type for #[bitflags].
 --> ui/invalid_repr.rs:5:8
  |
5 | #[repr(C)]
  |        ^

error: Signed types in a repr are not supported.
  --> ui/invalid_repr.rs:13:8
   |
13 | #[repr(i32)]
   |        ^^^

error: #[repr(usize)] is not supported. Use u32 or u64 instead.
  --> ui/invalid_repr.rs:21:8
   |
21 | #[repr(usize)]
   |        ^^^^^
